@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  setjmp.s
 ;
-;  Copyright (C) 2014, Philipp Klaus Krause
+;  Copyright (C) 2014-2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -31,17 +31,15 @@
 	.globl ___setjmp
 
 ___setjmp:
-	ldw	y, (4, sp)
-
 	; store return address
-	ldw	x, (1, sp)
-	ldw	(y), x
+	ldw	y, (1, sp)
+	ldw	(x), y
 	ld	a, (3, sp)
-	ld	(2, y), a
+	ld	(2, x), a
 
 	; store stack pointer
-	ldw	x, sp
-	ldw	(3, y), x
+	ldw	y, sp
+	ldw	(3, x), y
 
 	; return 0
 	clrw	x
@@ -51,8 +49,7 @@ ___setjmp:
 	.globl _longjmp
 
 _longjmp:
-	ldw	x, (4, sp)
-	ldw	y, (6, sp)
+	ldw	y, (4, sp)
 
 	; Restore stack pointer
 	pushw	x
